--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@types/socket.io": "^3.0.1",
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
